--- a/Css/utils.css
+++ b/Css/utils.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
 }
@@ -121,4 +121,53 @@ body{
     25%{background-image: url(../Img/logitech_G502_MOUSE.jpg);}
     50%{background-image: url(../Img/Headphones.jpg);}
     75%{background-image: url(../Img/keyboard.jpg);}
-} */
+} */ 
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    font-size: 62.5%;
+    width: 100%;
+    height: 100%;
+}
+.navbar-brand{
+    width:17%;
+    font-size:2.4rem;
+}
+.navbar{
+    font-size:2.4rem;
+    /* border: 1px solid red;  */
+}
+
+.btn{
+    font-size:2.4rem;
+    border:none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    background-color:rgb(32, 30, 30);
+    color: white;
+}
+
+.nav-link{
+    color:white;
+    padding:1.2rem;
+}
+
+.nav-item a:hover{
+    box-shadow: 0 0 0 0.3rem black;
+    background-color: black;
+}
+
+.btn:hover{
+    background: rgb(53, 52, 52);
+}
+
+@media (max-width:990px) {
+    .navbar{
+        height:8rem ;
+        font-size:2.4rem;
+    }
+}
